--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -12,11 +12,12 @@
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^22.15.21",
+    
     "nodemon": "^3.1.10",
     "ts-node-dev": "^2.0.0"
   },
   "dependencies": {
-    "express": "^5.1.0",
-    "ws": "^8.18.2"
+    "ws": "^8.18.2",
+    "express": "5.1.0"
   }
 }
