--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -1,15 +1,15 @@
 {
-  "name": "web",
-  "version": "1.0.0",
+  "name": "desafio-estagio",
   "private": true,
+  "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "build": "rsbuild build",
-    "check": "biome check --write",
-    "dev": "rsbuild dev --open",
-    "format": "biome format --write",
-    "lint": "eslint .",
-    "preview": "rsbuild preview"
+    "dev": "vite",
+    "build": "tsc -b && vite build",
+    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "preview": "vite preview",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "dependencies": {
     "@radix-ui/react-popover": "^1.1.1",
@@ -28,22 +28,33 @@
     "zustand": "^4.5.4"
   },
   "devDependencies": {
-    "@biomejs/biome": "^1.9.4",
-    "@eslint/compat": "^1.2.7",
-    "@eslint/js": "^9.23.0",
-    "@rsbuild/core": "^1.3.15",
-    "@rsbuild/plugin-react": "^1.3.0",
-    "@types/react": "^19.1.2",
-    "@types/react-dom": "^19.1.3",
-    "autoprefixer": "^10.4.21",
-    "eslint": "^9.23.0",
-    "eslint-plugin-react": "^7.37.4",
-    "eslint-plugin-react-hooks": "^5.2.0",
-    "globals": "^16.0.0",
-    "postcss": "^8.5.3",
-    "prettier": "^3.5.3",
-    "tailwindcss": "^4.1.7",
-    "typescript": "^5.8.3",
-    "typescript-eslint": "^8.29.0"
+    "@chromatic-com/storybook": "^1.6.1",
+    "@storybook/addon-actions": "^8.2.8",
+    "@storybook/addon-essentials": "^8.2.8",
+    "@storybook/addon-interactions": "^8.2.8",
+    "@storybook/addon-knobs": "^8.0.1",
+    "@storybook/addon-links": "^8.2.8",
+    "@storybook/addon-onboarding": "^8.2.8",
+    "@storybook/blocks": "^8.2.8",
+    "@storybook/react": "^8.2.8",
+    "@storybook/react-vite": "^8.2.8",
+    "@storybook/test": "^8.2.8",
+    "@types/node": "^22.1.0",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
+    "@typescript-eslint/eslint-plugin": "^7.15.0",
+    "@typescript-eslint/parser": "^7.15.0",
+    "@vitejs/plugin-react": "^4.3.1",
+    "@vitejs/plugin-react-swc": "^3.5.0",
+    "autoprefixer": "^10.4.20",
+    "eslint": "^8.57.0",
+    "eslint-plugin-react-hooks": "^4.6.2",
+    "eslint-plugin-react-refresh": "^0.4.7",
+    "eslint-plugin-storybook": "^0.8.0",
+    "postcss": "^8.4.41",
+    "storybook": "^8.2.8",
+    "tailwindcss": "^3.4.7",
+    "typescript": "^5.2.2",
+    "vite": "^5.3.4"
   }
 }
