--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -11,13 +11,14 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/express": "^5.0.2",
     "@types/node": "^22.15.21",
-    
+    "@types/ws": "^8.18.1",
     "nodemon": "^3.1.10",
     "ts-node-dev": "^2.0.0"
   },
   "dependencies": {
-    "ws": "^8.18.2",
-    "express": "5.1.0"
+    "express": "5.1.0",
+    "ws": "^8.18.2"
   }
 }
